# papamon

./: .gitignore  Api.py  App.py  CheckStatusApp.py  MasterApp.py  ReconstructApp.py  SentryEvents.py  SyncApp.py  Test.py  api.py  app.py  config.py  mainProcessHeightMap.py  requirements.txt  tutorial.txt
3d/: CMakeLists.txt  Makefile  capturer.py  capturer2.py  cmake_install.cmake  papamon-save-to-disk  rs-save-to-disk.cpp
api/: Api.py  MasterApi.py
config/: global.json  me.json  me.json.example  raspberry.json
config/master/: config.py  configAllBuild.sh  configBuild.sh  raspberries.json  raspberries.json.example  raspberry.json  scheduler.json  scheduler.json.example  schedulerGetImages.json.example
config/service/: comandos.txt  (+18 more)
constants/: EndPoints.py  Paths.py  paths.py
controller/: MasterController.py  RaspberryController.py  apiController.py
controllers/: ApiController.py  MasterApiController.py  MasterController.py  RaspberryController.py
mappers/: MeMapper.py  RaspberryMapper.py  StatusMapper.py
model/: CameraStatus.py  ListFiles.py  Me.py  Raspberry.py  Response.py  Scheduler.py  Status.py  StatusMaster.py  StatusRaspberies.py  StatusSlave.py  StatusSystem.py  SystemStatus.py  Time.py  response.py
rb/: status.json
reconstruct/: Makefile  Makefile_motion  Makefile_reconstruct  cameras.json  case_Sample0.json  glfw-imgui.lib  imgui.ini  mainReconstruct.cpp  rs-motion.cpp  rs-reconstruct  rs-save-cam-status  rs-save-cam-status.cpp  scene.cpp  scene.h  utils.cpp  utils.h
util/: File.py  Parser.py  Sentry.py  TimeUtil.py  Util.py  file.py
(+28 files in other folders)
